[tool.poetry]
name = "polarizer-fit-streamlit"
version = "0.1.0"
description = ""
authors = ["John Feng <johnfengphd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.2"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
streamlit-extras = "^0.4.0"
plotly = "^5.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
